# fluorescence-knee-video-analysis

./: .gitignore  README.md  environment-1.0.yml  environment-1.1.yml  environment-1.2.yml  environment-1.3.yml  knee segmentation.code-workspace  pyproject.toml  setup.py  test.py  update_paths.py
knee_segmentation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: centroid_stabilization_utility.ipynb  code_for_oliver.ipynb  knee segmentation.ipynb  old knee three parts analysis.ipynb  old_knee_circle_segments.ipynb  old_knee_segmentation.ipynb  progress notes.ipynb  video_frame_analysis_3_parts copy.ipynb  workshop.ipynb
scripts/: 1190_knee_radial_analysis.py  1190_knee_radial_segmentation.py  1193_aging_knee_segmentation.py  1193_normal_knee_analysis.py  1193_normal_knee_segmentation.py  1207_normal_knee_segmentation.py  1339_knee_radial_analysis.py  1339_knee_radial_segmentation-1.1.py  1339_knee_radial_segmentation.py  1342_aging_knee_analysis.py  1342_aging_knee_segmentation.py  1358_aging_knee_radial_segmentation.py  308_normal_knee_radial_analysis.py  308_normal_knee_radial_segmentation.py  AverageNormalizeHeatMap.py  PlotAllCOMSfromHeatmap.py  PlotAllCOMs.py  aging_knee_radial_segmentation.py  aging_knee_radial_segmentation_new_method.py  aging_knee_three_parts.py  aging_knee_three_parts_analysis.py  aging_knee_three_parts_segmentation.py  center_grayscale_video.py  convert_save_grayscale_video.py  export_knee_data.py  flux_smooth_try.m  (+18 more)
(+120 files in other folders)
