[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knee-segmentation"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
    "h5py==3.15.1",
    "matplotlib==3.10.8",
    "numpy==2.4.0",
    "opencv-python==4.12.0",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "tifffile==2025.12.20",
]

[project.optional-dependencies]
dev = [
    "ipykernel==7.1.0",
]

[project.scripts]
json-to-excel = "scripts.utils.json_excel_sync.json_to_excel:main"
excel-to-json = "scripts.utils.json_excel_sync.excel_to_json:main"

[tool.setuptools.packages.find]
where = ["src", "scripts"]